# gcf-knowledge-graph

./: .gitignore  README.md  pyproject.toml
data/: gcf_data.db
data/dictionary/: activity_type_dict.csv  bm_dict.csv  country_dict.csv  delivery_partner_dict.csv  entity_type_dict.csv  ess_category_dict.csv  modality_dict.csv  project_size_dict.csv  region_dict.csv  sector_dict.csv  stage_dict.csv  status_dict.csv  theme_dict.csv
data/export/: country.csv  country.xlsx  entity.csv  entity.xlsx  project.csv  project.xlsx  readiness.csv  readiness.xlsx
scripts/: create_knowledge_graph.py  import_data_dictionaries.py  import_data_exports.py  parse_countries.py
src/db/: db_handler.py  db_schema.py
src/importer/: base_csv_importer.py  base_xlsx_importer.py
src/importer/data_dict/: __init__.py  activity_type_dict_importer.py  bm_dict_importer.py  country_dict_importer.py  delivery_partner_dict_importer.py  entity_type_dict_importer.py  ess_category_dict_importer.py  modality_dict_importer.py  project_size_dict_importer.py  readiness_status_dict_importer.py  region_dict_importer.py  sector_dict_importer.py  size_dict_importer.py  stage_dict_importer.py  status_dict_importer.py  theme_dict_importer.py
src/importer/export/: __init__.py  country_export_importer.py  entity_export_importer.py  project_export_importer.py  readiness_export_importer.py
src/kg/: __init__.py  knowledge_graph.py
src/kg/db/: connection.py  query_executor.py
src/parser/: __init__.py  base_country_parser.py  project_country_parser.py  readiness_country_parser.py
src/utils/: singleton.py
(+40 files in other folders)
